fix(Column): fix rowSpan cell layer covering fixed columns

--- a/src/less/table.less
+++ b/src/less/table.less
@@ -13,10 +13,6 @@
     height: 36px;
     width: 100%;
     top: 0;
-    border-bottom: 1px solid @border-color;
-  }
-  &-row-rowspan + &-row {
-    border-top: 1px solid #eee;
   }
 
   &-hover &-row:hover {
@@ -109,6 +105,7 @@
     }
     &-content {
       padding: 8px;
+      border-bottom: 1px solid #eee;
       .ellipsis();
     }
 
@@ -119,10 +116,6 @@
       &-sort-wrapper {
         display: inline-block;
       }
-    }
-
-    &-rowspan {
-      border-bottom: 1px solid @border-color !important;
     }
   }
   &-column-resize-spanner {
@@ -166,8 +159,8 @@
     z-index: 6;
   }
 
-  &-bordered &-cell {
-    border-width: 0 1px 0 0;
+  &-cell-bordered &-cell-content {
+    border-right: 1px solid #eee;
   }
 
   &-word-wrap &-cell-content {
